--- a/web/src/layouts/minimal.astro
+++ b/web/src/layouts/minimal.astro
@@ -11,8 +11,8 @@ const className = Astro.props.className || '';
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{page.content.title}</title>
-    <link rel="stylesheet" href={Astro.resolve('../styles/global.scss')} />
+    <title>{page.content?.title}</title>
+    <link rel="stylesheet" href={Astro.resolve('../styles/base.scss')} />
 
     <link rel="shortcut icon" href="/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="192x192"  href="/favicon/android-icon-192x192.png">
@@ -27,7 +27,7 @@ const className = Astro.props.className || '';
   <body data-layout="base">
 
     <div class="root">
-      <main class={cn('container',className)}>
+      <main class={cn(className)}>
         <slot/>
       </main>
     </div>
