--- a/web/src/styles/_variables.scss
+++ b/web/src/styles/_variables.scss
@@ -5,5 +5,8 @@ $breakpoints: (
   llarge: 1440px
 );
 
+/** Minimum gap between elements */
 $gap: 4px;
-$maxWidth: 1440px;
+
+/** Maximum size of responsive design (above, it became centered) */
+$maxWidth: map-get($breakpoints, 'large');
