--- a/web/src/components/Garden/GardenList.module.scss
+++ b/web/src/components/Garden/GardenList.module.scss
@@ -52,8 +52,8 @@
 }
 
 .item-title {
-  @include h.weight(var(--text-weight));
-  @include h.link-text();
+  // @include h.weight(var(--text-weight));
+  // @include h.link-text();
 
   margin-block-start: 0;
   margin-block-end: 0;
