--- a/web/src/layouts/home.astro
+++ b/web/src/layouts/home.astro
@@ -1,6 +1,5 @@
 ---
 import {HeadingLevel} from '../@types/a11y';
-import {cn, avoidWidowedWords} from '../lib/helpers';
 import {Page, toPage, AstroPage, MarkdownPageReference, toPageSummary } from '../lib/page/Page'
 
 import BaseLayout from './base.astro';
@@ -43,9 +42,10 @@ function concatenateMetadata( astroPage: AstroPage ) {
 
   <section class="home" aria-labelledby="welcome">
     <div class="home-grid">
-      <div class="item highlight pad4">
+      <div class="item highlight">
         <slot />
       </div>
+      <img  class="decoration" src="/pictures/Philodentrum.webp" alt="Astro logo" />
     </div>
   </section>
 
@@ -70,19 +70,15 @@ function concatenateMetadata( astroPage: AstroPage ) {
     <div class="pad4"/>
   </section>
 
-  <RubberBall client:idle />
+  <!-- <RubberBall client:idle /> -->
   <!-- <RubberBall client:media={'(min-width: 426px), (prefers-reduced-motion: reduce)'} /> -->
 </BaseLayout>
 
-<style lang="scss" global>
+<style lang="scss" global hoist>
   @use "sass:math";
   @use "src/styles/grids" as grids;
   @use "src/styles/breakpoints" as bp;
   @use "src/styles/helpers" as h;
-
-  #content {
-    position: relative;
-  }
 
   $fold: 80vh;
   .home {
@@ -95,85 +91,82 @@ function concatenateMetadata( astroPage: AstroPage ) {
     height: 100%;
 
     $gap: 0px;
+
     @include grids.grid(6, $gap);
     grid-template-rows: repeat(4, math.div($fold, 4) );
 
-    .highlight{
-      grid-column: 4 / span 4;
-      grid-row: 1 / span 4;
+    .highlight {
+      grid-column: 4 / span 3;
+      grid-row: 2 / span 3;
 
       position: relative;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      z-index: 1;
+      justify-content: space-evenly;
 
-      @include bp.breakpoint(medium, min) {
-        text-shadow: 0 2px 12px var(--surface1);
-      }
-      @include bp.breakpoint(medium, max) {
-        background: linear-gradient(
-          to bottom,
-          transparent 0%,
-          hsl(var(--brand-hue) var(--brand-saturation) 100% / 0.79) 30%,
-          hsl(var(--brand-hue) var(--brand-saturation) 100% / 0.79) 70%,
-          transparent 100%
-        );
-      }
+      isolation: isolate;
+      z-index: 100;
+      overflow: hidden;
 
-      > .heading-spotlight {
+      padding: calc( var(--gap) * 4);
+
+      background: linear-gradient(
+        to bottom,
+        transparent 0%,
+        hsl(var(--brand-hue) var(--brand-saturation) 100% / 0.79) 30%,
+        hsl(var(--brand-hue) var(--brand-saturation) 100% / 0.79) 70%,
+        transparent 100%
+      );
+
+
+      // @include bp.breakpoint(medium, max) {
+      //   grid-row: 2 / span 4;
+      //   justify-content: space-evenly;
+      // }
+
+      .heading-spotlight {
         font-family: var(--subtitle-family);
         font-size: calc( var(--h1) * 1.1 );
         @include h.weight(var(--subtitle-weight));
+        margin: 0;
       }
-      > .heading-title {
+      .heading-title {
         font-family: var(--subtitle-family);
         font-size: calc( var(--h3) );
         @include h.weight(var(--subtitle-weight));
-
-        margin-bottom: 1em;
+        margin: 0;
       }
-
-      > .heading-subtitle {
+      .heading-subtitle {
         font-size: var(--h5);
       }
     }
 
-    &::after {
-      position: absolute;
-      isolation: isolate;
-      content: ' ';
-      // background: url('/pictures/Dieffenbachia robusta.png') no-repeat;
-      background-repeat: no-repeat;
-      background-image: url('/pictures/Philodentrum.webp');
-      background-image: -webkit-image-set(url('/pictures/Philodentrum.png'));
-      background-position: center bottom;
+    .decoration {
+      grid-column: 1 / span 6;
+      grid-row: 1 / span 6;
 
+      position: relative;
+      object-fit: contain;
+    
       @include bp.breakpoint(medium, min) {
         /** Occupy left part of screen */
-        background-size: contain;
         bottom: -5vh;
-        left: -2.5%;
-        width: 55%;
-        height: clamp(400px, 100vh, 800px);
+        left: -22.5%;
+        width: 100%;
+        height: clamp(400px, $fold, 800px);
       }
 
       @include bp.breakpoint(medium, max) {
         /** Occupy background */
         opacity: 1;
-        background-size: cover;
         bottom: -5vh;
         left: 0%;
-        width: 100%;
-        height: clamp(400px, 100vh, 800px);
+        height: clamp(400px, $fold, 800px);
       }
-      z-index: 0;
-    }
-
+    }    
   }
 
   .projects, .digital-garden {
-    z-index: 1;
     background-color: var(--surface3);
 
     @include bp.breakpoint(medium, min) {
