--- a/web/src/styles/_colorscheme.scss
+++ b/web/src/styles/_colorscheme.scss
@@ -49,44 +49,44 @@
   --shadow-strength-dim: 0.2;
 }
 
-[color-scheme='light'] {
-  color-scheme: light;
+// [color-scheme='light'] {
+//   color-scheme: light;
 
-  --brand: var(--brand-light);
-  --text1: var(--text1-light);
-  --text2: var(--text2-light);
-  --surface1: var(--surface1-light);
-  --surface2: var(--surface2-light);
-  --surface3: var(--surface3-light);
-  --surface4: var(--surface4-light);
-  --surface-shadow: var(--surface-shadow-light);
-  --shadow-strength: var(--shadow-strength-light);
-}
+//   --brand: var(--brand-light);
+//   --text1: var(--text1-light);
+//   --text2: var(--text2-light);
+//   --surface1: var(--surface1-light);
+//   --surface2: var(--surface2-light);
+//   --surface3: var(--surface3-light);
+//   --surface4: var(--surface4-light);
+//   --surface-shadow: var(--surface-shadow-light);
+//   --shadow-strength: var(--shadow-strength-light);
+// }
 
-[color-scheme='dark'] {
-  color-scheme: dark;
+// [color-scheme='dark'] {
+//   color-scheme: dark;
 
-  --brand: var(--brand-dark);
-  --text1: var(--text1-dark);
-  --text2: var(--text2-dark);
-  --surface1: var(--surface1-dark);
-  --surface2: var(--surface2-dark);
-  --surface3: var(--surface3-dark);
-  --surface4: var(--surface4-dark);
-  --surface-shadow: var(--surface-shadow-dark);
-  --shadow-strength: var(--shadow-strength-dark);
-}
+//   --brand: var(--brand-dark);
+//   --text1: var(--text1-dark);
+//   --text2: var(--text2-dark);
+//   --surface1: var(--surface1-dark);
+//   --surface2: var(--surface2-dark);
+//   --surface3: var(--surface3-dark);
+//   --surface4: var(--surface4-dark);
+//   --surface-shadow: var(--surface-shadow-dark);
+//   --shadow-strength: var(--shadow-strength-dark);
+// }
 
-[color-scheme='dim'] {
-  color-scheme: dark;
+// [color-scheme='dim'] {
+//   color-scheme: dark;
 
-  --brand: var(--brand-dim);
-  --text1: var(--text1-dim);
-  --text2: var(--text2-dim);
-  --surface1: var(--surface1-dim);
-  --surface2: var(--surface2-dim);
-  --surface3: var(--surface3-dim);
-  --surface4: var(--surface4-dim);
-  --surface-shadow: var(--surface-shadow-dim);
-  --shadow-strength: var(--shadow-strength-dim);
-}
+//   --brand: var(--brand-dim);
+//   --text1: var(--text1-dim);
+//   --text2: var(--text2-dim);
+//   --surface1: var(--surface1-dim);
+//   --surface2: var(--surface2-dim);
+//   --surface3: var(--surface3-dim);
+//   --surface4: var(--surface4-dim);
+//   --surface-shadow: var(--surface-shadow-dim);
+//   --shadow-strength: var(--shadow-strength-dim);
+// }
