--- a/web/src/styles/base.scss
+++ b/web/src/styles/base.scss
@@ -4,12 +4,9 @@
 @use './grids' as grids;
 @use './colorscheme' as colors;
 
+@import './reset';
 @import './typo';
 @import './imgs';
-
-* {
-  box-sizing: border-box;
-}
 
 html {
   scroll-behavior: smooth;
@@ -42,53 +39,32 @@ body {
 
   /** Default colorscheme is light */
   color-scheme: light;
-  --brand: var(--brand-light);
-  --text1: var(--text1-light);
-  --text2: var(--text2-light);
-  --text1-invert: var(--text1-dark);
-  --text2-invert: var(--text2-dark);
+  // --brand: var(--brand-light);
+  // --text1: var(--text1-light);
+  // --text2: var(--text2-light);
+  // --text1-invert: var(--text1-dark);
+  // --text2-invert: var(--text2-dark);
 
-  --surface1: var(--surface1-light);
-  --surface1-translucent: var(--surface1-light-translucent);
-  --surface2: var(--surface2-light);
-  --surface3: var(--surface3-light);
-  --surface4: var(--surface4-light);
-  --surface1-invert: var(--surface1-dark);
-  --surface1-invert-translucent: var(--surface1-dark-translucent);
-  --surface2-invert: var(--surface2-dark);
-  --surface3-invert: var(--surface3-dark);
-  --surface4-invert: var(--surface4-dark);
-  --surface-shadow: var(--surface-shadow-light);
-  --shadow-strength: var(--shadow-strength-light);
+  // --surface1: var(--surface1-light);
+  // --surface1-translucent: var(--surface1-light-translucent);
+  // --surface2: var(--surface2-light);
+  // --surface3: var(--surface3-light);
+  // --surface4: var(--surface4-light);
+  // --surface1-invert: var(--surface1-dark);
+  // --surface1-invert-translucent: var(--surface1-dark-translucent);
+  // --surface2-invert: var(--surface2-dark);
+  // --surface3-invert: var(--surface3-dark);
+  // --surface4-invert: var(--surface4-dark);
+  // --surface-shadow: var(--surface-shadow-light);
+  // --shadow-strength: var(--shadow-strength-light);
 
+  /** Animations */
   --anim-quick: 0.1s;
   --anim-default: 0.24s;
   --anim-slow: 1.37s;
 
   --anim-easeOutExpo: cubic-bezier(0.16, 1, 0.3, 1);
 }
-
-/**
- * Disabled until VIC-51 is implemented
-@media (prefers-color-scheme: dark) {
-  :root {
-    color-scheme: dark;
-
-    --brand: var(--brand-dark);
-    --text1: var(--text1-dark);
-    --text2: var(--text2-dark);
-    --text1-invert: var(--text1-light);
-    --text2-invert: var(--text2-light);
-
-    --surface1: var(--surface1-dark);
-    --surface2: var(--surface2-dark);
-    --surface3: var(--surface3-dark);
-    --surface4: var(--surface4-dark);
-    --surface-shadow: var(--surface-shadow-dark);
-    --shadow-strength: var(--shadow-strength-dark);
-  }
-}
-*/
 
 body {
   -webkit-font-smoothing: antialiased;
@@ -101,13 +77,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
-// TODO: Remove this, .container is not used
-// /** Global wrapper */
-// .container {
-//   width: 100%;
-//   flex: 1 1 100%;
-// }
 
 /* Reusable wrapper */
 .wrapper {
@@ -193,8 +162,8 @@ body {
   @include h.shadow();
 }
 
-/** 
- * Grid generics 
+/**
+ * Grid generics
  * 2x2 grid
  */
 .grid2 {
@@ -218,7 +187,7 @@ body {
 
 /**
  * Cut the element out of it's container,
- * make it to occupy 100% viewport width, 
+ * make it to occupy 100% viewport width,
  * while in flow mode.
  */
 .full-bleed {
