--- a/app/app/styles/buttons.pcss
+++ b/app/app/styles/buttons.pcss
@@ -1,4 +1,4 @@
-.button {
+._button_1rck6_1 {
   --outline-width: 4px;
   --outline-color: var(--surfaceInvert);
 
@@ -20,7 +20,7 @@
     cursor: not-allowed;
   }
 
-  &.outlined {
+  &._outlined_1rck6_23 {
     box-shadow: 0 0 0 calc(var(--outline-width) / 2) var(--outline-color);
     &:hover,
     &:active {
@@ -28,7 +28,7 @@
     }
   }
 
-  &.transparent {
+  &._transparent_1rck6_31 {
     box-shadow: none;
     background-color: transparent;
 
@@ -38,7 +38,7 @@
     }
   }
 
-  &.filled {
+  &._filled_1rck6_41 {
     --outline-color: var(--surface4);
     background-color: var(--surface3);
 
@@ -49,7 +49,7 @@
     }
   }
 
-  &.invert {
+  &._invert_1rck6_52 {
     background-color: var(--surfaceInvert);
     color: var(--textInvert);
 
@@ -60,7 +60,7 @@
     }
   }
 
-  &.no-hover {
+  &._no-hover_1rck6_63 {
     &:hover {
       cursor: default;
       box-shadow: 0 0 0 calc(var(--outline-width) / 2) var(--outline-color);
