--- a/app/app/styles/reset.css
+++ b/app/app/styles/reset.css
@@ -9,6 +9,7 @@
 }
 
 /** Allow percentage-based heights */
+
 html,
 body {
   height: 100%;
@@ -21,6 +22,7 @@ body {
 }
 
 /** Improve media defaults */
+
 img,
 picture,
 video,
@@ -31,6 +33,7 @@ svg {
 }
 
 /** Remove built-in form typography styles */
+
 input,
 button,
 textarea,
@@ -39,6 +42,7 @@ select {
 }
 
 /** Avoid text-overflows */
+
 p,
 h1,
 h2,
@@ -46,7 +50,7 @@ h3,
 h4,
 h5,
 h6 {
-  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 hr {
@@ -59,6 +63,7 @@ hr {
 }
 
 /** Create a root stacking ctx */
-#root {
+
+#_root_1n1pt_1 {
   isolation: isolate;
 }
