--- a/app/app/components/Header/Header.module.css
+++ b/app/app/components/Header/Header.module.css
@@ -1,6 +1,3 @@
-@use 'src/styles/variables' as *;
-@use 'src/styles/breakpoints' as bp;
-
 .header {
   position: relative;
   display: flex;
@@ -8,13 +5,13 @@
   padding: calc(4 * var(--gap));
 
   background-color: var(--surface1-translucent);
-  @include bp.breakpoint(medium, min) {
-    padding: calc(var(--gap) * 4) 4em;
-  }
-  @include bp.breakpoint(small, max) {
-    padding: calc(var(--gap) * 4);
-    background-color: var(--surface1-translucent);
-  }
+  // @include bp.breakpoint(medium, min) {
+  //   padding: calc(var(--gap) * 4) 4em;
+  // }
+  // @include bp.breakpoint(small, max) {
+  //   padding: calc(var(--gap) * 4);
+  //   background-color: var(--surface1-translucent);
+  // }
 
   transition: all 1.2s cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -26,18 +23,18 @@
 
   display: flex;
   align-items: center;
+}
 
-  & > a {
-    display: inline-flex;
-    color: inherit;
-    transform: scale(1);
-    transition: color 200ms ease-out, transform 150ms ease-out;
+.branding > a {
+  display: inline-flex;
+  color: inherit;
+  transform: scale(1);
+  transition: color 200ms ease-out, transform 150ms ease-out;
 
-    @media (hover: hover) {
-      &:hover {
-        color: var(--brand);
-        transform: scale(1.1);
-      }
+  @media (hover: hover) {
+    &:hover {
+      color: var(--brand);
+      transform: scale(1.1);
     }
   }
 }
@@ -45,7 +42,7 @@
 /**
  * Keyboard navigation
  */
-a.skipMain {
+a.skipmain {
   color: inherit;
   text-decoration: none;
 
@@ -57,7 +54,7 @@ a.skipMain {
   overflow: hidden;
   z-index: 1;
 }
-a.skipMain:focus {
+a.skipmain:focus {
   left: 0;
   top: 2px;
   width: 30%;
