Feat: @custom-media support via service worker

--- a/app/styles/shared.css
+++ b/app/styles/shared.css
@@ -2,6 +2,7 @@
 
 /* coisa */
 @import "./reset.css";
+@import "./media.css";
 @import "./typography/typography.css";
 @import "./colors.css";
 @import "./buttons.pcss";
