--- a/app/app/styles/typography/typography.css
+++ b/app/app/styles/typography/typography.css
@@ -1,64 +1,13 @@
-@font-face {
-  font-family: manrope vf;
-  src: url(/fonts/manrope/variable/Manrope[wght].woff2) format('woff2-variations');
-  font-style: normal;
-  font-variation-settings: 'wght' 500;
-  font-variation-ligatures: normal;
-  font-weight: 200 800;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-ExtraLight.woff2) format('woff2');
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-Light.woff2) format('woff2');
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-Regular.woff2) format('woff2');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-Medium.woff2) format('woff2');
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-SemiBold.woff2) format('woff2');
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-Bold.woff2) format('woff2');
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: Manrope;
-  src: url(/fonts/manrope/webfonts/Manrope-ExtraBold.woff2) format('woff2');
-  font-weight: 800;
-}
+@import "./manropeLoader.css";
 
 :root {
-  --font-sans: manrope vf, Manrope, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-    Droid Sans, Helvetica Neue, sans-serif;
+  --font-sans: manrope vf, Manrope, system-ui, -apple-system, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 body,
 html,
 input {
-  font-family: manrope vf, Manrope, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
-    Droid Sans, Helvetica Neue, sans-serif;
   font-family: var(--font-sans);
   font-size: var(--font-size-1); /** Default is 1em = 16px */
 
@@ -66,15 +15,14 @@ input {
 }
 
 /** Disable the default margin of headings */
-
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 a:-webkit-any-link {
@@ -92,10 +40,8 @@ a[href] {
 }
 
 a.no-link {
-  color: #000;
   color: initial;
   &:visited {
-    color: #000;
     color: initial;
   }
 }
@@ -105,7 +51,6 @@ a.no-link {
 }
 
 /** h2 and beyound */
-
 .subheadline {
   font-size: var(--font-size-fluid-1);
 }
