--- a/app/app/styles/buttons.css
+++ b/app/app/styles/buttons.css
@@ -1,4 +1,4 @@
-._button_1rck6_1 {
+.button {
   --outline-width: 4px;
   --outline-color: var(--surfaceInvert);
 
@@ -14,56 +14,57 @@
   cursor: pointer;
 
   color: var(--text1);
+}
 
-  &[disabled] {
+  .button[disabled] {
     opacity: 0.5;
     cursor: not-allowed;
   }
 
-  &._outlined_1rck6_23 {
+  .button.outlined {
     box-shadow: 0 0 0 calc(var(--outline-width) / 2) var(--outline-color);
-    &:hover,
-    &:active {
+  }
+
+  .button.outlined:hover,
+    .button.outlined:active {
       box-shadow: 0 0 0 calc(var(--outline-width)) var(--outline-color);
     }
-  }
 
-  &._transparent_1rck6_31 {
+  .button.transparent {
     box-shadow: none;
     background-color: transparent;
-
-    &:hover,
-    &:active {
-      box-shadow: none;
-    }
   }
 
-  &._filled_1rck6_41 {
+  .button.transparent:hover,
+    .button.transparent:active {
+      box-shadow: none;
+    }
+
+  .button.filled {
     --outline-color: var(--surface4);
     background-color: var(--surface3);
 
     box-shadow: 0 0 0 calc(var(--outline-width) / 2) var(--outline-color);
-    &:hover,
-    &:active {
-      box-shadow: 0 0 0 calc(var(--outline-width)) var(--outline-color);
-    }
   }
 
-  &._invert_1rck6_52 {
+  .button.filled:hover,
+    .button.filled:active {
+      box-shadow: 0 0 0 calc(var(--outline-width)) var(--outline-color);
+    }
+
+  .button.invert {
     background-color: var(--surfaceInvert);
     color: var(--textInvert);
 
     box-shadow: 0 0 0 calc(var(--outline-width) / 2) var(--outline-color);
-    &:hover,
-    &:active {
-      box-shadow: 0 0 0 calc(var(--outline-width)) var(--outline-color);
-    }
   }
 
-  &._no-hover_1rck6_63 {
-    &:hover {
+  .button.invert:hover,
+    .button.invert:active {
+      box-shadow: 0 0 0 calc(var(--outline-width)) var(--outline-color);
+    }
+
+  .button.no-hover:hover {
       cursor: default;
       box-shadow: 0 0 0 calc(var(--outline-width) / 2) var(--outline-color);
     }
-  }
-}
