--- a/app/app/styles/shared.css
+++ b/app/app/styles/shared.css
@@ -183,8 +183,11 @@ hr {
 @keyframes pulse{50%{transform:scale(.9)}}
 
 html {
-  /** Light */
+  /* -------------------------------------------------------------------------- */
+  /* --------------------------------- Light --------------------------------- */
+  /* -------------------------------------------------------------------------- */
   --brand-light: var(--orange-6);
+  --brand-emphasis-light: var(--green-6);
 
   /* Foreground elements are text and icons */
   --fg-light: var(--gray-8);
@@ -206,7 +209,9 @@ html {
   --surface-shadow-light: 200 10% 20%;
   --shadow-strength-light: 5%;
 
-  /** Dark */
+  /* -------------------------------------------------------------------------- */
+  /* --------------------------------- * Dark --------------------------------- */
+  /* -------------------------------------------------------------------------- 
   --brand-dark: var(--orange-3);
 
   --text1-dark: var(--gray-1);
@@ -224,27 +229,29 @@ html {
 
   --surface-shadow-dark: 200 50% 3%;
   --shadow-strength-dark: 8%;
+  */
 }
 
 :root {
   --brand: var(--brand-light);
+  --brand-emphasis: var(----brand-emphasis-light);
 
-  --text1: var(--fg-light);
-  --text2: var(--fg-muted-light);
-  --textInvert: var(--fg-emphasis-light);
+  --fg: var(--fg-light);
+  --fg-muted: var(--fg-muted-light);
+  --fg-emphasis: var(--fg-emphasis-light);
 
   --link: var(--link-light);
   --link-visited: var(--link-visited-light);
 
-  --surface1: var(--bg-light);
-  --surface2: var(--bg-subtle-light);
-  --surface3: var(--bg-inset-light);
-  --surface4: var(--bg-emphasis-light);
+  --bg: var(--bg-light);
+  --bg-subtle: var(--bg-subtle-light);
+  --bg-inset: var(--bg-inset-light);
+  --bg-emphasis: var(--bg-emphasis-light);
 
-  --surfaceInvert: var(--surfaceInvert-light);
+  /* --surfaceInvert: var(--surfaceInvert-light); */
 
-  --surface-shadow: var(--surface-shadow-light);
-  --shadow-strength: var(--shadow-strength-light);
+  /* --surface-shadow: var(--surface-shadow-light); */
+  /* --shadow-strength: var(--shadow-strength-light); */
 }
 
 /**
@@ -270,6 +277,25 @@ html {
   }
 }
 */
+
+/** Colorscheme */
+
+.bg {
+  background-color: var(--bg);
+}
+
+.bg.subtle {
+  background-color: var(--bg-subtle);
+}
+
+.bg.inset {
+  background-color: var(--bg-inset);
+}
+
+.bg.emphasis {
+  background-color: var(--bg-emphasis);
+  color: var(--fg-emphasis);
+}
 
 @font-face {
   font-family: manrope vf;
@@ -334,7 +360,19 @@ input {
   font-size: var(--font-size-1); /** Default is 1em = 16px */
   line-height: 1.5em;
 
-  color: var(--text1);
+  color: var(--fg);
+}
+
+.text {
+  color: var(--fg);
+}
+
+.text.muted {
+  color: var(--fg-muted);
+}
+
+.text.emphasis {
+  color: var(--fg-emphasis);
 }
 
 /** Disable the default margin of headings */
@@ -382,23 +420,44 @@ p {
 
 .headline {
   font-size: var(--font-size-fluid-3);
+  line-height: 2em;
 }
 
 /** h2 and beyound */
 
 .subheadline {
   font-size: var(--font-size-fluid-1);
+  line-height: 2em;
 }
 
 .caption {
-  color: var(--text2);
+  color: var(----fg-muted);
   font-size: var(--font-size-fluid-0);
   font-weight: normal;
 }
 
-:root {
-  --headerH: 64px;
+/**
+ * Grid generics
+ * 2x column grid
+ */
+
+.grid2 {
+  /** otherwise, a 2 column grid */
+  display: grid;
+  grid-gap: var(--size-2);
+  grid-template-columns: repeat(2, 1fr);
+
+  align-content: space-evenly;
+  justify-content: space-evenly;
 }
+
+/* disable grid in mobile */
+
+@media (--sm-n-below) {
+.grid2 {
+    grid-template-columns: 1fr
+}
+  }
 
 /* 
  * Fluid wrapper (of a page)
@@ -407,6 +466,7 @@ p {
 
 .wrapper-fluid {
   max-width: 1440px;
+
   margin-left: auto;
   margin-right: auto;
   width: clamp(16rem, 90vw, 76rem);
@@ -423,77 +483,28 @@ p {
   width: 1px;
 }
 
-.text-pad {
-  padding: calc(var(--unit) * 2) calc(var(--unit) * 2);
-}
-
-.pad4 {
-  padding: var(--unit) var(--unit);
-}
-
-.pad4-x {
-  padding: 0 var(--unit);
-}
-
-.pad4-y {
-  padding: var(--unit) 0;
-}
-
-.pad8 {
-  padding: calc(var(--unit) * 2) calc(var(--unit) * 2);
-}
-
-.pad8-x {
-  padding: 0 calc(var(--unit) * 2);
-}
-
-.pad8-y {
-  padding: calc(var(--unit) * 2) 0;
-}
-
-.fl-y-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.center {
+.flex-center {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.abs-center {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 .m-auto {
   margin: 0 auto;
 }
 
-.align-center {
-  align-items: center;
-}
-
-/** Colorscheme */
-
-.text1 {
-  color: var(--text1);
-}
-
-.text2 {
-  color: var(--text2);
-}
-
-.surface1 {
-  background-color: var(--surface1);
-}
-
-.surface2 {
-  background-color: var(--surface2);
-}
-
-.surface3 {
-  background-color: var(--surface3);
-}
-
-.surface4 {
-  background-color: var(--surface4);
+.layer {
+  padding: var(--size-2);
+  border: var(--border-size-2);
+  border-radius: var(--radius-2);
 }
