--- a/app/app/styles/typography/typography.css
+++ b/app/app/styles/typography/typography.css
@@ -10,6 +10,7 @@ html,
 input {
   font-family: var(--font-sans);
   font-size: var(--font-size-1); /** Default is 1em = 16px */
+  line-height: 1.5em;
 
   color: var(--text1);
 }
@@ -44,6 +45,12 @@ a.no-link {
   &:visited {
     color: initial;
   }
+}
+
+p {
+  margin-bottom: 1.5em;
+  line-height: 1.5em;
+  font-size: var(--font-size-1);
 }
 
 .headline {
